<?xml version="1.0" encoding="utf-8"?>
<androidx.drawerlayout.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/dl"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">


        <LinearLayout xmlns:tools="http://schemas.android.com/tools"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            tools:context=".HomeActivity">

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="#424242"
                        android:onClick="order"
                        android:text="@string/orderButton"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/image1"
                        android:layout_width="120dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/latte"
                        android:scaleType="fitXY"
                        android:src="@drawable/latte" />

                    <RatingBar
                        android:id="@+id/ratingBar"
                        style="@android:style/Widget.Material.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name1"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image1"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="#3C3737"
                        android:rating="3.5" />

                    <TextView
                        android:id="@+id/name1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image1"
                        android:text="@string/latte"
                        android:textColor="#080808"
                        android:textSize="20sp"

                        />

                    <TextView
                        android:id="@+id/rupee1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc1"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image1"
                        android:text="@string/Rs"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cost1"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc1"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/rupee1"
                        android:text="@string/lattePrice"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc1"
                        android:layout_width="142dp"
                        android:layout_height="37dp"
                        android:layout_below="@id/ratingBar"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="100dp"
                        android:layout_toEndOf="@id/image1"
                        android:text="@string/coffeeDesc"
                        android:textSize="10sp" />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="#424242"
                        android:onClick="order"
                        android:text="@string/orderButton"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/image2"
                        android:layout_width="128dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/americano"
                        android:scaleType="fitXY"
                        android:src="@drawable/americano" />

                    <RatingBar
                        android:id="@+id/ratingBar1"
                        style="@android:style/Widget.Material.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name2"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image2"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="#3C3737"
                        android:rating="4" />

                    <TextView
                        android:id="@+id/name2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_marginEnd="93dp"
                        android:layout_toEndOf="@id/image2"
                        android:text="@string/americano"
                        android:textColor="#080808"
                        android:textSize="20sp"

                        />

                    <TextView
                        android:id="@+id/rupee2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc2"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image2"
                        android:text="@string/Rs"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cost2"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc2"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/rupee2"
                        android:text="@string/americanoPrice"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc2"
                        android:layout_width="142dp"
                        android:layout_height="37dp"
                        android:layout_below="@id/ratingBar1"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="100dp"
                        android:layout_toEndOf="@id/image2"
                        android:text="@string/coffeeDesc"
                        android:textSize="10sp"

                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="#424242"
                        android:onClick="order"
                        android:text="@string/orderButton"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/image3"
                        android:layout_width="128dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/espresso"
                        android:scaleType="fitXY"
                        android:src="@drawable/espresso" />

                    <RatingBar
                        android:id="@+id/ratingBar2"
                        style="@android:style/Widget.Material.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name3"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image3"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="#3C3737"
                        android:rating="3" />

                    <TextView
                        android:id="@+id/name3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image3"
                        android:text="@string/espresso"
                        android:textColor="#080808"
                        android:textSize="20sp"

                        />

                    <TextView
                        android:id="@+id/rupee3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc3"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image3"
                        android:text="@string/Rs"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cost3"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc3"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/rupee3"
                        android:text="@string/espressoPrice"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc3"
                        android:layout_width="142dp"
                        android:layout_height="37dp"
                        android:layout_below="@id/ratingBar2"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="100dp"
                        android:layout_toEndOf="@id/image3"
                        android:text="@string/coffeeDesc"
                        android:textSize="10sp"

                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

            <androidx.cardview.widget.CardView
                android:layout_width="match_parent"
                android:layout_height="140dp"
                android:layout_marginLeft="10dp"
                android:layout_marginTop="10dp"
                android:layout_marginRight="10dp"
                app:cardElevation="6dp">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content">

                    <Button
                        android:id="@+id/button4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_alignParentBottom="true"
                        android:backgroundTint="#424242"
                        android:onClick="order"
                        android:text="@string/orderButton"
                        android:textColor="#ffffff" />

                    <ImageView
                        android:id="@+id/image4"
                        android:layout_width="128dp"
                        android:layout_height="120dp"
                        android:layout_margin="10dp"
                        android:contentDescription="@string/cappucino"
                        android:scaleType="fitXY"
                        android:src="@drawable/cappuccino" />

                    <RatingBar
                        android:id="@+id/ratingBar3"
                        style="@android:style/Widget.Material.Light.RatingBar.Small"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/name4"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image4"
                        android:isIndicator="true"
                        android:max="5"
                        android:numStars="5"
                        android:progressTint="#3C3737"
                        android:rating="3.5" />

                    <TextView
                        android:id="@+id/name4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image4"
                        android:text="@string/cappucino"
                        android:textColor="#080808"
                        android:textSize="20sp"

                        />

                    <TextView
                        android:id="@+id/rupee4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc4"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/image4"
                        android:text="@string/Rs"
                        android:textSize="20sp" />

                    <TextView
                        android:id="@+id/cost4"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/desc4"
                        android:layout_marginStart="5sp"
                        android:layout_marginTop="5dp"
                        android:layout_toEndOf="@id/rupee4"
                        android:text="@string/cappucinoPrice"
                        android:textSize="20sp"
                        android:textStyle="bold" />

                    <TextView
                        android:id="@+id/desc4"
                        android:layout_width="142dp"
                        android:layout_height="37dp"
                        android:layout_below="@id/ratingBar3"
                        android:layout_alignParentEnd="true"
                        android:layout_centerHorizontal="true"
                        android:layout_marginStart="1dp"
                        android:layout_marginTop="9dp"
                        android:layout_marginEnd="100dp"
                        android:layout_toEndOf="@id/image4"
                        android:text="@string/coffeeDesc"
                        android:textSize="10sp"

                        />
                </RelativeLayout>

            </androidx.cardview.widget.CardView>

        </LinearLayout>
    </ScrollView>

    <com.google.android.material.navigation.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        app:headerLayout="@layout/navigation_header"
        app:menu="@menu/navigation_menu" />
</androidx.drawerlayout.widget.DrawerLayout>
